--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        tools:context=".MainActivity">
+        tools:context=".activity.main.MainActivity">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/navHostFragment"
@@ -49,7 +49,7 @@
             app:layout_anchorGravity="center"
             app:srcCompat="@drawable/ic_search"
             app:tint="@color/white"
-            android:backgroundTint="@color/select_item_color"
+            android:backgroundTint="@color/primary_color"
             />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
