--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Hwaa" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- enable window content transitions -->
-        <item name="android:windowActivityTransitions">true</item>
-
-        <!-- Animation when start activity  -->
-        <item name="android:windowEnterAnimation">@anim/slide_in_right</item>
-        <item name="android:windowExitAnimation">@anim/slide_out_left</item>
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <style name="Base.Theme.Hwaa" parent="Theme.MaterialComponents.NoActionBar">
     </style>
+    <style name="Theme.Hwaa" parent="Base.Theme.Hwaa" />
 </resources>
