--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="bottom_background_corner_radius">12dp</dimen>
     <dimen name="lesson_item_text_size">18sp</dimen>
     <dimen name="btn_bookmark_size">48dp</dimen>
+    <dimen name="avatar_size">48dp</dimen>
 </resources>
