--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/bg_start_learning_button"
+            android:background="@drawable/bg_button"
             android:text="Start Learning"
             android:textAlignment="center"
             android:textSize="16sp"
