--- a/app/src/main/res/layout/tb_book_fragment.xml
+++ b/app/src/main/res/layout/tb_book_fragment.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/tbBookFragment"
+    <Toolbar
+        android:id="@+id/tbBook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:titleTextColor="@color/white">
+        android:contentInsetStart="0dp"
+        android:contentInsetEnd="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clMain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_avatar"
@@ -131,64 +126,6 @@
                 app:layout_constraintTop_toTopOf="@+id/progressIndicator" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clLesson"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingHorizontal="24dp">
-
-            <ImageButton
-                android:id="@+id/ibBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/back"
-                android:src="@drawable/ic_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/ibMore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/more"
-                android:src="@drawable/ic_more"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/lpiLesson"
-                android:layout_width="0dp"
-                android:layout_height="12dp"
-                app:layout_constraintStart_toEndOf="@+id/ibBack"
-                app:layout_constraintEnd_toStartOf="@+id/ibMore"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:progress="50"
-                android:progressTint="@color/f2f2f2"
-                android:trackTint="@color/primary_color"
-                app:indicatorColor="@color/primary_color"
-                app:trackColor="@color/f2f2f2"
-                app:trackCornerRadius="6dp"
-                android:layout_marginHorizontal="16dp"/>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="32dp"
-                android:background="@color/f2f2f2"
-                app:layout_constraintTop_toTopOf="@+id/lpiLesson"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-                
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.appcompat.widget.Toolbar>
+    </Toolbar>
 
 </layout>
