--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,11 @@
     <dimen name="avatar_size">48dp</dimen>
     <dimen name="hwaa_toolbar_height">93dp</dimen>
     <dimen name="bottom_app_bar_height">65dp</dimen>
+    <dimen name="vocab_tag_stroke_width">1dp</dimen>
+    <dimen name="tag_min_width">65dp</dimen>
+    <dimen name="tag_text_size">12sp</dimen>
+    <dimen name="tag_corner_radius">1dp</dimen>
+    <dimen name="tag_min_height">32dp</dimen>
+    <dimen name="seek_bar_thickness">4dp</dimen>
+    <dimen name="seek_bar_thumb_size">20dp</dimen>
 </resources>
