--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,22 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/hwaa_toolbar_height"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
             tools:context=".activity.main.MainActivity">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:fitsSystemWindows="false"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <com.example.hwaa.util.ui.HwaaToolBar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:backgroundTint="@color/white"
                     app:layout_collapseMode="pin" />
@@ -44,23 +47,23 @@
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/bottom_app_bar_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/white"
             android:backgroundTint="@color/white"
-            app:contentInsetStart="5dp"
             app:contentInsetEnd="5dp"
+            app:contentInsetStart="5dp"
             app:hideOnScroll="true">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:hideOnScroll="true"
                 app:itemBackground="@drawable/bottom_item_background"
                 app:itemIconTint="@color/bottom_icon_color"
                 app:labelVisibilityMode="unlabeled"
-                app:menu="@menu/main_activity_bottom_bar_menu"
-                app:hideOnScroll="true">
+                app:menu="@menu/main_activity_bottom_bar_menu">
 
                 <ImageButton
                     android:id="@+id/fab"
