--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bottom_item_background">#E5F2FF</color>
     <color name="e5f2ff">#E5F2FF</color>
     <color name="f2f2f2">#F2F2F2</color>
+    <color name="f8f8f8">#f8f8f8</color>
 </resources>
