--- a/app/src/main/res/layout/fragment_lesson_list.xml
+++ b/app/src/main/res/layout/fragment_lesson_list.xml
@@ -4,8 +4,7 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".fragment.main.forum.PostFragment">
+        android:layout_height="match_parent">
 
         <com.example.hwaa.util.ui.CustomRecyclerView
             android:id="@+id/rv_book"
