--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,10 @@
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 
+    <style name="Hwaa.SearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:editTextColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:colorControlActivated">@color/black</item>
+    </style>
+
 </resources>
