--- a/app/src/main/res/drawable/book_item_background_shape.xml
+++ b/app/src/main/res/drawable/book_item_background_shape.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/e5f2ff" />
+            <solid android:color="@color/item_lesson_background_color" />
             <corners android:radius="12dp" />
         </shape>
     </item>
