--- a/app/src/main/res/drawable/bottom_item_background.xml
+++ b/app/src/main/res/drawable/bottom_item_background.xml
@@ -4,9 +4,9 @@
         <layer-list>
             <item android:gravity="center_vertical|center_horizontal">
                 <shape android:shape="rectangle">
-                    <stroke android:color="@android:color/transparent" android:width="15dp" />
-                    <solid android:color="@color/bottom_item_background" />
-                    <corners android:radius="@dimen/bottom_background_corner_radius"/>
+                    <stroke android:width="15dp" android:color="@android:color/transparent" />
+                    <solid android:color="@color/transparent" />
+                    <corners android:radius="@dimen/bottom_background_corner_radius" />
                 </shape>
             </item>
         </layer-list>
@@ -15,9 +15,9 @@
         <layer-list>
             <item android:gravity="center_vertical|center_horizontal">
                 <shape android:shape="rectangle">
-                    <stroke android:color="@android:color/transparent" android:width="15dp" />
+                    <stroke android:width="15dp" android:color="@android:color/transparent" />
                     <solid android:color="@android:color/transparent" />
-                    <corners android:radius="@dimen/bottom_background_corner_radius"/>
+                    <corners android:radius="@dimen/bottom_background_corner_radius" />
                 </shape>
             </item>
         </layer-list>
