--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,29 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/gd_activity_background"
         tools:context=".activity.main.MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/appbar_background_color"
             tools:context=".activity.main.MainActivity">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent"
                 android:fitsSystemWindows="false"
-                android:backgroundTint="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <com.example.hwaa.util.ui.HwaaToolBar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/transparent"
                     app:layout_collapseMode="pin" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -49,16 +48,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/white"
-            android:backgroundTint="@color/white"
-            app:contentInsetEnd="5dp"
-            app:contentInsetStart="5dp"
+            android:backgroundTint="@color/bottom_app_bar_color"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp"
             app:hideOnScroll="true">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="76dp"
+                android:background="@drawable/bg_bottom_app_bar"
                 app:hideOnScroll="true"
                 app:itemBackground="@drawable/bottom_item_background"
                 app:itemIconTint="@color/bottom_icon_color"
@@ -67,8 +66,8 @@
 
                 <ImageButton
                     android:id="@+id/fab"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:background="@drawable/bg_circle_button"
                     android:contentDescription="@string/fab"
