--- a/app/src/main/res/layout/item_lesson_header.xml
+++ b/app/src/main/res/layout/item_lesson_header.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@android:color/transparent"
         android:padding="16dp">
 
         <TextView
@@ -13,8 +13,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chapter 1"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/main_text_color"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,18 +24,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Travel"
-            android:textColor="@color/primary_color"
-            android:textSize="18sp"
+            android:textColor="@color/main_text_color"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lessons completed"
-            android:textSize="14sp"
-            android:textColor="@android:color/black"
             android:layout_marginTop="8dp"
+            android:text="Lessons completed"
+            android:textColor="@color/main_text_color"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_lesson_header" />
 
@@ -42,20 +45,21 @@
             android:id="@+id/tv_lesson_complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0/5"
-            android:textSize="14sp"
-            android:textColor="@color/primary_color"
             android:layout_marginTop="8dp"
+            android:text="0/5"
+            android:textColor="@color/main_text_color"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_lesson_topic" />
-        
+
         <View
             android:layout_width="24dp"
             android:layout_height="1dp"
-            android:background="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@color/main_text_color"
             app:layout_constraintBottom_toBottomOf="@id/tv_lesson_header"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
