--- a/app/src/main/res/layout/tb_vocab_fragment.xml
+++ b/app/src/main/res/layout/tb_vocab_fragment.xml
@@ -6,7 +6,7 @@
         android:id="@+id/tbVocabFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/transparent"
         app:contentInsetEnd="0dp"
         app:contentInsetStart="0dp"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
