--- a/app/src/main/res/drawable/bg_star.xml
+++ b/app/src/main/res/drawable/bg_star.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/primary_color" />
 
-    <solid android:color="@color/bottom_app_bar_color" />
     <corners
-        android:topLeftRadius="9999dp"
-        android:topRightRadius="9999dp" />
+        android:bottomLeftRadius="8dp"
+        android:bottomRightRadius="8dp" />
 
 </shape>
