--- a/app/src/main/res/drawable/gd_activity_background.xml
+++ b/app/src/main/res/drawable/gd_activity_background.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <gradient
         android:angle="90"
-        android:endColor="#1F2E35"
-        android:startColor="#22343C"
+        android:endColor="#D0EFFF"
+        android:startColor="#ffe3e0"
         android:type="linear" />
 </shape>
