--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -11,7 +11,7 @@
             android:id="@+id/fl_lesson_icon"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_margin="24dp"
+            android:layout_margin="32dp"
             android:background="@drawable/book_item_image_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,12 +38,24 @@
             android:textColor="@color/main_text_color"
             android:textSize="@dimen/lesson_item_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/ib_bookmark"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/fl_lesson_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <LinearLayout
+            android:id="@+id/ll_lesson_star"
+            android:layout_width="wrap_content"
+            android:layout_height="26dp"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/bg_star"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingHorizontal="4dp"
+            app:layout_constraintEnd_toEndOf="@+id/v_lesson_background"
+            app:layout_constraintTop_toTopOf="@+id/v_lesson_background" />
+
         <View
+            android:id="@+id/v_lesson_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="16dp"
@@ -72,30 +84,6 @@
             app:layout_constraintBottom_toTopOf="@+id/fl_lesson_icon"
             app:layout_constraintEnd_toEndOf="@id/fl_lesson_icon"
             app:layout_constraintStart_toStartOf="@+id/fl_lesson_icon"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <ImageButton
-            android:id="@+id/ib_bookmark"
-            android:layout_width="@dimen/btn_bookmark_size"
-            android:layout_height="@dimen/btn_bookmark_size"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/bookmark"
-            android:src="@drawable/ic_bookmark_day"
-            app:layout_constraintBottom_toBottomOf="@id/v_bookmark"
-            app:layout_constraintEnd_toEndOf="@id/v_bookmark"
-            app:layout_constraintStart_toStartOf="@id/v_bookmark"
-            app:layout_constraintTop_toTopOf="@id/v_bookmark"
-            app:tint="@color/item_book_image_bg_color" />
-
-        <View
-            android:id="@+id/v_bookmark"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="32dp"
-            android:background="@drawable/book_item_bookmark_background"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
