--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -53,6 +53,7 @@
             app:layout_constraintTop_toBottomOf="@+id/start_text" />
 
         <TextView
+            android:id="@+id/start_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
