--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,11 @@
         <item name="background">@drawable/bg_bottom_app_bar</item>
     </style>
 
+    <style name="Hwaa.EditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/black</item>
+        <item name="hintTextColor">@color/black</item>
+        <item name="android:editTextColor">@color/black</item>
+        <item name="android:colorControlActivated">@color/black</item>
+    </style>
+
 </resources>
