--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:backgroundTint="@color/bottom_app_bar_color"
+            android:background="@drawable/bg_bottom_app_bar"
             app:contentInsetEnd="0dp"
             app:contentInsetStart="0dp"
             app:hideOnScroll="true">
