--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="unselect_item_color">#131313</color>
     <color name="primary_color">#3A94E7</color>
-    <color name="bottom_item_background">#3DD598</color>
+    <color name="bottom_item_background">#3A94E7</color>
     <color name="e5f2ff">#E5F2FF</color>
     <color name="f2f2f2">#F2F2F2</color>
     <color name="transparent">#00000000</color>
@@ -15,11 +15,15 @@
     <color name="main_background_color">#ffffff</color>
     <color name="appbar_background_color">#ffffff</color>
     <color name="bottom_app_bar_color">#ffffff</color>
-    <color name="bottom_app_bar_item_color">#3DD598</color>
+    <color name="bottom_app_bar_item_color">#3A94E7</color>
     <color name="main_text_color">#000000</color>
     <color name="item_lesson_background_color">#ffffff</color>
     <color name="tb_book_item_color">#96A7AF</color>
     <color name="item_book_image_bg_color">#3A94E7</color>
     <color name="start_lesson_color">#ffffff</color>
     <color name="bg_topic_color">#1A3A94E7</color>
+    <color name="streak_show">#FF4500</color>
+    <color name="streak_hide">#96A7AF</color>
+    <color name="star_show">#FF4500</color>
+    <color name="star_hide">#96A7AF</color>
 </resources>
